Update DeleteCommandTest.java